Fri Jul 23 12:11:53 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/SimpleDB/DB.pm (mogrify): Dumb bug made returning
 	undefined key (implying that the entry should not be deleted) not
 	work.

1999-07-20  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* bin/mj_shell: Applied patch bu Anton Berezin to fix various
	  unquoted regexp metachars.

Sun Jul 18 14:12:55 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (new): addr_xforms is now a parsed variable, so
 	conig_get returns a ref, not an array.

	* lib/Mj/Config.pm (parse_xform_array): Make xform_array a parsed
 	type; do some simple substitutions so folks can write 'ignore
 	case' instead of /(.*)/\L$1/.

Sat Jul 17 10:13:15 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/RegList.pm:
	* lib/Mj/SubscriberList.pm:
		Add rewritefrom field.

	* t/shell.t: Store database_backend in the temp site config.

	* setup/setup_func.pl (do_site_config): Save database_backend in
 	the site config file.

	* setup/ask_basic.pl (ask_basic): Ask about DB_File support.

	* lib/Mj/SimpleDB.pm: Rip autoconversion; it causes more trouble
 	and initial lock overhead than it's worth.

	* lib/mj_cf_data.pl: Remove database_backend variable.

	* lib/Majordomo.pm (new): database_backend is now a site config
 	variable.

	* Makefile.PL: Changes to support prerequisites that aren't
 	essential.  Pause interactive configuration after prereq checks
 	and before configuration dialogue begins.
	
	* lib/Mj/SimpleDB/DB.pm (mogrify): Forgot to delete the key when
 	necessary.  Fixed some undef warnings.	

Fri Jul 16 11:54:28 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/SimpleDB/DB.pm (add): Fix typo resulting in complete
 	deadlock when calling add.

	* lib/Mj/RegList.pm (compare): 
	* lib/Mj/AddressList.pm (compare):
		Quickened up comparison function (access @_ instead of
 		using my variables).

	* lib/Mj/SubscriberList.pm (new): Forgot to add comparison
 	function.
