@@ -1,6 +1,7 @@
 sub ask_domain {
-  my($confg, $i) = @_;
+  my($config, $i) = @_;
   my $hdr = "Configuring the domain: $i.";
+  my $cfg = $config->{'domain'}{$i};
 
   #---- Ask for global configuration information:
   #---- Actual Internet domain
@@ -10,8 +11,8 @@ $hdr
 What is the actual Internet domain name?
 
 EOM
-  $def = $config->{'domain'}{$i}{'whereami'} || $i;
-  $config->{'domain'}{$i}{'whereami'} = get_str($msg, $def);
+  $def = $cfg->{'whereami'} || $i;
+  $cfg->{'whereami'} = get_str($msg, $def);
   
   #---- Ask for the actual address that Majordomo will receive mail at
   $msg = <<EOM;
@@ -21,8 +22,8 @@ What address will the Majordomo at $i receive mail at?
  This is normally "majordomo" but if you are running a Majordomo1
   installation you may want to run Majordomo2 at an address like "mj2".
 EOM
-  $def = $config->{domain}{$i}{whoami} || 'majordomo';
-  $config->{domain}{$i}{whoami} = get_str($msg, $def);
+  $def = $cfg->{whoami} || 'majordomo';
+  $fg->{whoami} = get_str($msg, $def);
 
   #---- owner address, for alias construction
   $msg = <<EOM;
@@ -30,10 +31,10 @@ $hdr
 
 What is the email address of the owner of this Majordomo installation?
 EOM
-  $def = $config->{'domain'}{$i}{'owner'};
+  $def = $cfg->{'owner'};
   # XXX Should probably have a get_addr routine, but we might have
   # problems requiring Mj::Addr.pm.
-  $config->{'domain'}{$i}{'owner'} = get_str($msg, $def);
+  $cfg->{'owner'} = get_str($msg, $def);
   
   #---- name of majordomo
   $msg = <<EOM;
@@ -43,8 +44,8 @@ What is the name of Majordomo installation at $i?
  The installation can be given a name that is used as a title for reports,
    the output of the lists command, and elsewhere.
 EOM
-  $def = $config->{'domain'}{$i}{'site_name'};
-  $config->{'domain'}{$i}{'site_name'} = get_str($msg, $def);
+  $def = $cfg->{'site_name'};
+  $cfg->{'site_name'} = get_str($msg, $def);
   
   #---- Get global password
   $msg = <<EOM;
@@ -55,31 +56,53 @@ Please choose a password.
     list functions.  This password is independent of the individual list
     passwords.
 EOM
-  $def = $config->{'domain'}{$i}{'master_password'};
+  $def = $cfg->{'master_password'};
   if ($config->{save_passwords}) {
-    $config->{'domain'}{$i}{'master_password'} = get_str($msg, $def);
+    $cfg->{'master_password'} = get_str($msg, $def);
   } else {
-    delete $config->{'domain'}{$i}{'master_password'};
+    delete $cfg->{'master_password'};
   }
-  
-  #---- Ask for location of old (1.x) lists
-#   $msg = <<EOM;
-# Where are the Majordomo 1.x lists for $i stored?
-#   If you have lists that were maintained by Majordomo 1.x, you can convert
-#     them for use by Majordomo 2.0.  You will be given the option to do this
-#     during the "make postinstall" step at the end of the installation.
-#   If you have no 1.x lists to convert, enter nothing.
-# EOM
-#   $def = $config->{'domain'}{$i}{'old_lists_dir'};
-#   $config->{'domain'}{$i}{'old_lists_dir'} = get_dir($msg, $def, 1);
-  
-#   # Try to get list of lists; for each list found, ask enough questions
-#   # about it to enable a conversion.
-  
-#   print "\nSorry, old list conversion not yet implemented.  Use:\n";
-#   print "mj_shell -p password createlist list owner\@address\n";
-#   print "mj_shell -p password -f old_list_file subscribe=quiet,noinform new_list\n";
-#   print "To convert lists.\n";
+
+  #---- Ask if there are old (1.x) lists to convert
+  $msg = <<EOM;
+$hdr
+
+Do you have Majordomo 1.x lists to convert?
+ Majordomo2 can convert your old lists into the new format for you using
+  the convertlist.pl script.
+
+EOM
+  $def = defined($cfg->{'old_lists'}) ? $cfg->{'old_lists'} : 0;
+  $cfg->{'old_lists'} = get_bool($msg, $def);
+
+  if ($cfg->{'old_lists'}) {
+
+    #---- Ask for location of old (1.x) lists
+    $msg = <<EOM;
+$hdr
+
+Where are the Majordomo 1.x lists for $i stored?
+ You can enter the path to the directory here, or you can specify it using
+  the -o option to convertlist.pl.
+
+EOM
+    $def = $cfg->{'old_lists_dir'};
+    $cfg->{'old_lists_dir'} = get_dir($msg, $def, 1);
+
+    #---- Ask for location of majordomo.cf.
+    $msg = <<EOM;
+$hdr
+
+What is the full path to the Majordomo 1.x configuration file for lists in
+  $i?
+ The file is usually named majordomo.cf and is generally in the same place
+  as the Majordomo1 wrapper and scripts, but some configurations place it
+  elsewhere or give it a different name.
+
+EOM
+    $def = $cfg->{'old_majordomo_cf'};
+    $cfg->{'old_majordomo_cf'} = get_file($msg, $def, 1);
+  }
 
   #---- Ask for qmail information
   if ($config->{'mta'} eq 'qmail') {
